force-app/main/default/objects/Field_Mapping__c/fields/External_Label__c.field-meta.xml
<CustomField>
    <fullName>External_Label__c</fullName>
    <label>External Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>