force-app/main/default/objects/Field_Mapping__c/fields/External_Table__c.field-meta.xml
<CustomField>
    <fullName>External_Table__c</fullName>
    <label>External Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>