force-app/main/default/objects/Field_Mapping__c/fields/SF_Object__c.field-meta.xml
<CustomField>
    <fullName>SF_Object__c</fullName>
    <label>SF Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>